# agent-firewall

./: .gitignore  30-day-firewall-plan.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/incidents/: README.md  cline-1213.md  cline-1831.md  hermes-7069.md  langchain-16712.md  langgraph-1097.md  langgraph-4172.md  langgraph-6053.md  langgraph-6731.md  mcp-3662.md  opencode-3444.md  vscode-275957.md
docs/launch/: reddit-langchain.md  show-hn.md  x-thread.md
docs/media/: agent-firewall-demo.tape
examples/: complaints.json  policy.json  wrap_tool.py
examples/demo/: Dockerfile.vhs  README.md  run_demo.py
examples/demo/workspace/: hello.txt
src/agent_firewall/: __init__.py  approvals.py  audit.py  cli.py  dashboard.py  exceptions.py  firewall.py  mcp_proxy.py  models.py  policy.py  state.py
tests/: test_approvals.py  test_cli.py  test_dashboard.py  test_firewall.py  test_mcp_proxy.py  test_policy.py  test_state.py
tests/fixtures/: fake_mcp_server.py
