[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-firewall"
version = "0.1.0"
description = "A small runtime policy guard for AI-agent tool calls."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Haseeb Raza" }]
keywords = ["ai-agents", "guardrails", "security", "tool-calling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = []

[project.scripts]
agent-firewall = "agent_firewall.cli:main"

[project.urls]
Repository = "https://github.com/haseebraza715/agent-firewall"
Issues = "https://github.com/haseebraza715/agent-firewall/issues"

[tool.setuptools.packages.find]
where = ["src"]

